fix username overflow

--- a/src/static/scss/components/_fr-user-menu.scss
+++ b/src/static/scss/components/_fr-user-menu.scss
@@ -25,6 +25,9 @@
     letter-spacing: normal;
     color: #fff;
     padding-right: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:before {
       position: absolute;
